# SIMDb

./: .clang-format  CMakeLists.txt  README.md  run.sh
.github/workflows/: simdb_build.yml
include/: menu.hpp  movie.hpp  records.hpp  typing.hpp  utils.hpp
src/: main.cpp  menu.cpp  movie.cpp  records.cpp
